Add exports and opens in ForkingTaskRunner for Java 11+.
Test, doc changes.